--- a/css/style.css
+++ b/css/style.css
@@ -3793,7 +3793,6 @@ button.accordion.is-open:after {
 }
 .form-callback__btn {
   margin-bottom: 15px;
-  max-width: 176px;
 }
 .form__input--call {
   margin-bottom: 25px;
@@ -4605,6 +4604,9 @@ button.accordion.is-open:after {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
   }
   .logo--footer {
     -webkit-box-ordinal-group: 2;
@@ -4645,6 +4647,9 @@ button.accordion.is-open:after {
   .footer__copyright {
     width: 100%;
     text-align: center;
+  }
+  .footer__phone--footer {
+    padding-top: 0;
   }
   .books {
     padding-bottom: 100px;
