--- a/css/style.css
+++ b/css/style.css
@@ -1306,6 +1306,9 @@ img.mfp-img {
   color: #13384B;
   margin-left: 0px;
 }
+.logo__text span {
+  display: block;
+}
 .address {
   width: 100%;
   height: auto;
@@ -2143,7 +2146,7 @@ img.mfp-img {
   color: #14394C;
   margin: 0;
   width: 100%;
-  margin-bottom: 60px;
+  margin-bottom: 15px;
 }
 .about__text {
   font-family: Lato-Regular;
@@ -2151,7 +2154,7 @@ img.mfp-img {
   font-weight: normal;
   font-size: 16px;
   line-height: 130%;
-  color: #13384B;
+  color: #14394C;
   margin: 0;
   padding-bottom: 20px;
 }
@@ -2204,11 +2207,12 @@ img.mfp-img {
 .about__name {
   font-family: ProximaNova-Regular;
   font-style: normal;
-  font-weight: normal;
-  font-size: 16px;
-  line-height: 19px;
-  color: #333333;
+  font-weight: 600;
+  font-size: 18px;
+  line-height: 130%;
+  color: #14394C;
   margin: 0;
+  padding-bottom: 10px;
 }
 .about__position {
   font-family: ProximaNova-Regular;
@@ -2877,6 +2881,7 @@ button.accordion.is-open:after {
   background-repeat: repeat;
   background-size: auto;
   padding-top: 70px;
+  padding-bottom: 50px;
   overflow: hidden;
 }
 .gift__wrapper {
@@ -3043,7 +3048,7 @@ button.accordion.is-open:after {
   font-family: Lato-Regular;
   font-style: normal;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 22px;
   letter-spacing: 0.02em;
   color: #010101;
@@ -3197,13 +3202,14 @@ button.accordion.is-open:after {
   font-family: Lato-Regular;
   font-style: normal;
   font-weight: 300;
-  font-size: 16px;
+  font-size: 18px;
   line-height: 22px;
   letter-spacing: 0.02em;
   color: #010101;
   overflow: hidden;
   resize: none;
-  padding-left: 5px;
+  padding-left: 10px;
+  padding-top: 5px;
 }
 .form__input--texarea textarea:hover {
   cursor: pointer;
@@ -3265,25 +3271,31 @@ button.accordion.is-open:after {
           align-items: flex-start;
   border: 1px solid #F3F3F3;
   border-radius: 6px;
-  padding-left: 25px;
-  padding-right: 25px;
+  padding-left: 5px;
+  padding-right: 5px;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
-/*.calc-form--wrap {
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		align-items: center;
-	}*/
+.calc-form__wrapper-hid {
+  padding-left: 25px;
+  padding-right: 25px;
+}
 .calc-form__title {
-  text-align: left;
+  text-align: center;
   font-family: ProximaNova-Regular;
   font-style: normal;
   font-weight: normal;
-  font-size: 23px;
+  font-size: 20px;
   line-height: 130%;
   color: #0E0C17;
+}
+.calc-form__title--hid {
+  text-align: left;
+  font-size: 23px;
+}
+.calc-form__input input {
+  font-size: 18px;
+  font-family: Lato-Regular;
 }
 .calc-form__subtitle {
   font-family: ProximaNova-Regular;
@@ -3293,6 +3305,10 @@ button.accordion.is-open:after {
   line-height: 15px;
   text-align: center;
   color: #0E0C17;
+  margin-top: 0;
+}
+.calc-form__subtitle--hid {
+  margin-top: 0px;
 }
 .calc-form__btn {
   margin: 15px auto 15px;
@@ -3897,7 +3913,7 @@ button.accordion.is-open:after {
   max-width: 790px;
   width: 100%;
   margin: 0 auto 20px;
-  padding: 15px 5px 15px 10px;
+  padding: 25px 10px 25px 15px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -3965,6 +3981,9 @@ button.accordion.is-open:after {
   display: block;
   width: 16px;
   height: 16px;
+}
+.faq-item__btn:hover {
+  cursor: pointer;
 }
 .faq-item__btn--active {
   background-color: #EFEFEF;
@@ -4447,6 +4466,7 @@ button.accordion.is-open:after {
   .about__title {
     text-align: left;
     font-size: 48px;
+    margin-bottom: 40px;
   }
   .about__item {
     margin-left: auto;
@@ -4482,6 +4502,18 @@ button.accordion.is-open:after {
             transform: translateX(-50%);
     width: 100%;
     width: 306px;
+  }
+  .about__photo {
+    width: 450px;
+    height: 620px;
+  }
+  .about__photo img {
+    bottom: 0px;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+            transform: translateX(-50%);
+    width: 100%;
+    width: 500px;
   }
   .about__item {
     padding-top: 100px;
@@ -4712,24 +4744,12 @@ button.accordion.is-open:after {
     margin-bottom: 10px;
   }
   .faq-item {
-    padding: 25px 30px 20px 30px;
+    padding: 30px 15px 30px 30px;
   }
 }
 @media screen and (min-width: 768px) {
   .advantage__wrapper {
     padding-top: 120px;
-  }
-  .about__photo {
-    width: 450px;
-    height: 620px;
-  }
-  .about__photo img {
-    bottom: 0px;
-    left: 50%;
-    -webkit-transform: translateX(-50%);
-            transform: translateX(-50%);
-    width: 100%;
-    width: 500px;
   }
 }
 @media screen and (min-width: 1100px) {
@@ -4746,7 +4766,7 @@ button.accordion.is-open:after {
             justify-content: space-between;
     overflow-x: hidden;
     overflow-y: auto;
-    padding-top: 120px;
+    padding-top: 50px;
   }
   .about__col {
     width: 55%;
@@ -4774,6 +4794,7 @@ button.accordion.is-open:after {
   }
   .about__title {
     font-size: 60px;
+    margin-bottom: 65px;
   }
   .faq {
     padding-top: 120px;
@@ -4997,6 +5018,9 @@ button.accordion.is-open:after {
         -ms-flex-order: 1;
             order: 1;
   }
+  .books__title {
+    font-size: 60px;
+  }
   .map {
     padding-bottom: 0px;
   }
@@ -5035,6 +5059,9 @@ button.accordion.is-open:after {
     max-width: 740px;
     width: 100%;
     margin-bottom: 40px;
+  }
+  .faq-item {
+    padding: 32px 28px 32px 50px;
   }
 }
 @media screen and (min-width: 1260px) {
@@ -5102,6 +5129,7 @@ button.accordion.is-open:after {
   .process__title {
     margin-right: auto;
     margin-bottom: 80px;
+    font-size: 60px;
   }
   .process-item:nth-child(1) {
     height: 280px;
